<package>
  <name>obj_localizer</name>
  <version>0.0.1</version>
  <description>Vision task utilities</description>

  <maintainer email="christoforos.kanellakis@ltu.se">Christoforos Kanellakis</maintainer>

  <author>Christoforos Kanellakis</author>


  <license>BSD</license>
 <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
 <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <!-- <build_depend>yolo_ros_vino</build_depend> -->
  <build_depend>darknet_ros_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>
 <run_depend>libpcl-all</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <!-- <run_depend>yolo_ros_vino</run_depend> -->
  <run_depend>darknet_ros_msgs</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>


</package>
