<?xml version="1.0"?>
<package format="2">
  <name>visualization_tools</name>
  <version>0.0.1</version>
  <description>A ROS packages for visualizing in ROS</description>
  <maintainer email="chrkan@ltu.se">Akash Patel</maintainer>
  <license>BSD</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!--<depend>eigen</depend>-->
  <!--<depend>boost</depend>-->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
</package>
